src/base-ui.less
/* ... */
.info-primary{
    .linear-gradient( #fffffa, #ffffe5);
}

/* Form
 -------------------------------------------------- */
form{
    .padding;
}
label,
input,
select,
option,
textarea,
button{
    font-size:16px;
}
label{
    display:block;
    margin:8px 0;
}
label.title{
    color:#888;
}

label.checkbox,
label.radio{
    line-height:30px;
}

label.checkbox input[type=checkbox],
label.radio input[type=radio]{
    display:inline-block;
    width:32px;
    height:32px;
    margin-right:2px;
    overflow:visible;
    vertical-align:middle;
}

input[type="checkbox"]:after,
input[type="radio"]:after{
    content:'';
    display:block;
    width:32px;
    height:32px;
    background:url(img/fields.png);
}
input[type="checkbox"]:checked:after,
input[type="radio"]:checked:after{
    content:'';
    display:block;
    width:32px;
    height:32px;
    background-position:0 -32px;
}
input[type="radio"]:after{
    background-position:0 -64px;
}
input[type="radio"]:checked:after{
    background-position:0 -96px;
}

select{
    -webkit-appearance: button;
    width: 100%;
    padding-left: 5px;
    border-width: 3px 49px 3px 7px;
    line-height: 36px;
    border-radius:4px;
    -webkit-border-image: url(https://i.alipayobjects.com/e/201209/1H18fMwDEC.png) 3 49 3 7 stretch stretch;
    .box-sizing();
}

input[type="text"],
input[type="password"], 
input[type="search"],
input[type="tel"],
input[type="number"] {
    border: 1px solid #a5a9b1;
    width: 100%;
    padding:.7em .5em;
    .border(#a5a9b1);
    border-radius:4px;
    .box-shadow(inset 2px 2px 3px #ddd);
    .box-sizing();
}

.field-with-3char > label{
    margin-right:3.2em;
}
.field-with-3char > a{
    float:right;
    margin-top:-38px;
}

.field-with-4char > label{
    margin-right:4.2em;
}
.field-with-4char > a{
    float:right;
    margin-top:-38px;
}

/* Buttons
 -------------------------------------------------- */
.btn-box{
    margin:8px 0;
}
.btn{
    height:41px;
    padding:0 12px;
    vertical-align:middle;
    font-size:16px;
    color:#265687;
    .border(#8f98a6);
    border-radius: 4px;
    .linear-gradient(#fbfbfc, #e0e5e9);
    .text-light;
    .box-shadow(1px 2px 3px #ccc);
    .box-sizing();
}
.btn[disabled]{
    color:#888;
    background:#edf0f2;
}
a.btn{
    display:inline-block;
    line-height:32px;
}
.btn-block{
    display: block;
    width:100%;
    text-align:center;
}
.btn-primary{
    color:#fff;
    .border(#802600);
    .text-shadow;
    .linear-gradient(#fb8525,#ce4704);
}
.btn-primary[disabled]{
    color:#ddd;
    background:#ee9c5a;
}
.btn-2cols .btn{
    width:48%;
}
.btn-2cols .btn:last-child{
    float:right;
}
.btn-2cols:after{
    content:'';
    clear:both;
}

/* Icon
 -------------------------------------------------- */
.icon{
    display:inline-block;
    margin-right:2px;
    width:16px;
    height:16px;
    vertical-align:middle;
    background:url(img/msg.png) 0 -160px;
}
.icon-success{
    background-position-y: -200px
}
.icon-error{
    background-position-y: 0;
}
.icon-info{
    background-position-y:-120px; 
}
.icon-question{
    background-position-y:-80px; 
}

/* Message
 -------------------------------------------------- */
.msg{
    margin:8px 0;
    padding:6px 6px 6px 24px;
    line-height:1.5em;
    background:#ffffe5;
    border:1px solid #ffcc7f;
    border-radius:4px;
}
.msg > i{
    margin-left:-18px;
}

.msg-success{
    background:#f0ffe5;
    border:1px solid #4dbf00;
}

.msg-error{
    background:#fff2f2;
    border:1px solid #ff8080;
}

.msg-info{
    background:#e5f5ff;
    border:1px solid #40b3ff;
}

/* Chevron
 -------------------------------------------------- */
.chevron{
    position:relative;
    display:inline-block;
    width:13px;
    height:13px;
    overflow:hidden;
}
.chevron:before,
.chevron:after{
    content:'';
    display:block;
    position:absolute;
    left:50%;
    top:50%;
    margin-top:-2px;
    width:2px;
    height:6px;
    background:#7d8893;
}
.chevron:before{
    margin-left:-3px;
    -webkit-transform: rotate(-45deg);
            transform: rotate(-45deg);
}
.chevron:after{
    -webkit-transform: rotate(45deg);
            transform: rotate(45deg);
}

.chevron-primary{
    width:19px;
    height:19px;
    background:#8192ab;
    border-radius:10px;
}
.chevron-primary:before,
.chevron-primary:after{
    background:#fff;
}

.chevron-right:before{
    margin-left:0px;
    margin-top:-5px;
}

.chevron-top:before{
    margin-left:0px;
    margin-top:-3px;
}
.chevron-top:after{
    margin-left:-3px;
    margin-top:-3px;
}

/* Accordion
 -------------------------------------------------- */
.accordion .trigger{
    padding:12px;
    border-top:1px solid #aabcce;
    border-bottom:1px solid #aabcce;
    .linear-gradient(#fafbfb, #d9dfe3);
    .box-shadow(inset 0 0 2px #fcfdfd);
}
.accordion .trigger > a{
    position: relative;
    display: block;
    padding: inherit;
    margin: -12px;
    color: inherit;
}
.accordion .trigger .chevron{
    float:right;
    margin-top:2px;
}

.accordion .trigger-active .chevron:before{
    margin-left:0px;
    margin-top:-3px;
}
.accordion .trigger-active .chevron:after{
    margin-left:-3px;
    margin-top:-3px;
}


/* List
 -------------------------------------------------- */
/* Remove usual bullet styles from list */
.list {
    list-style: none;
}

/* Pad each list item and add dividers */
.list li {
    padding:12px;
    border-bottom: 1px solid #ddd;
    .linear-gradient(#fff, #f8f8f8);
}

/* Give top border to first list items */
.list li:first-child {
    border-top: 1px solid #ddd;
}

/* If a list of links, make sure the child <a> takes up full list item tap area (want to avoid selecting child buttons though) */
.list li > a {
   position: relative;
   display: block;
   padding: inherit;
   margin: -12px;
   color: inherit;
}
/* ... */

